puree-tests/src/test/resources/pos/IntendedIsRespectedOnDeeperLevels.scala
@com.tkroman.puree.annotation.intended
object IntendedIsRespectedOnDeeperLevels {
  def f(): Int = {
    Some(1)
    1
  }
}
