puree-tests/src/test/resources/neg/UnusedList.scala
object UnusedList {
  def f(): Int = {
    List(1)
    1
  }
}
